# LLAToECEF

./: .gitignore  CMakeLists.txt  Convert_test.sh  README.md  Utils_test.sh  makeclean.sh  makerun.sh  maketest.sh
data/: test_data.csv
src/: main.cpp
src/convert/: CMakeLists.txt  coordinate-converter.cpp  coordinate-converter.h  coordinate-converter_test.cpp
src/utils/: CMakeLists.txt  utils.cpp  utils.h  utils_test.cpp
